# mikecore-python

./: .gitignore  BuildNativeBin.bat  Dockerfile  InstallPackages.bat  MANIFEST.in  MIKECore.pyproj  MIKECore.sln  README.md  docker.md  notused.dfs2  pyproject.toml  setup.py
.github/: build_linux.yml
.github/workflows/: build windows.yml  build.yml  build_linux.yml  build_wheels.yml  full_test.yml  test_linux.yml
MIKECoreCUtil/: MIKECoreCUtil.cpp  MIKECoreCUtil.h  MIKECoreCUtil.vcxproj  MIKECoreCUtil.vcxproj.filters  cpp.hint  pch.h
buildUtil/: build.py  eumXMLProcess.py  packages.config
docker/ubuntu/: Dockerfile
docs/: .gitignore  _quarto.yml  index.qmd
mikecore/: Dfs0Util.py  Dfs123File.py  DfsBuilder.py  DfsDLL.py  DfsFactory.py  DfsFile.py  DfsFileFactory.py  DfsuBuilder.py  DfsuFile.py  MeshBuilder.py  MeshFile.py  Projections.py  __init__.py  eum.py
miketools/: Dfs0ToAscii.py  DfsShowInfo.py
testdata/: Oresund.mesh  TS_non_ascii.dfs0  shoreline_profile.dfs2
tests/: Test.py  examples_dfs0.py  examples_dfs2.py  examples_dfsu.py  examples_misc.py  test_dfs0.py  test_dfs2.py  test_dfs3.py  test_dfs_basic.py  test_dfs_custom_block.py  test_dfs_spatial_axis.py  test_dfs_static_item.py  test_dfs_temporal_axis.py  test_dfsbuilder.py  test_dfsu2D.py  test_dfsu_file.py  test_eum.py  test_mesh.py  test_miketools.py  test_projections.py  test_run_all.py  test_shoreline.py  test_util.py
